Do not capitalize package name, that is weird

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TKO",
+  "name": "tko",
   "version": "0.0.1",
   "description": "Write structured Knockout.js code",
   "main": "index.js",
